Adding Node Group inputs unhides newly added inputs on nodes with hidden node sockets #94413

Closed
opened 2021-12-27 14:28:34 +01:00 by Ludvik Koutny · 18 comments
Contributor

Blender Version
Broken: version: 3.0
Worked: never

Short description of error
When using multiple group inputs in one GN node tree, and hiding unused node sockets to keep the tree visually clean, adding a new input socket into Group Input node will make this new socket appear in all existing Group Input nodes which are set to hide unused node sockets, so the user has to go through all of them and cycle the "hide unused node socket" toggle to properly hide the unused node sockets again.

Exact steps for others to reproduce the error

  • Open .blend file
  • Hide unused sockets of any one Group Input node ({nav Nodes > Toggle Hidden node Sockets})

Add a new input socket from sidebar.

Result: The newly added input has appeared on all instances of Group Input node, despite not being used on them and the nodes being set to "hide unused node sockets".
Expected: Newly added input to a Group Input node will not appear on nodes with "hide unused node sockets" enabled, because it is unused on them.

Test File:
#94413.blend
2021-12-27 14-29-03.mp4

**Blender Version** Broken: version: 3.0 Worked: never **Short description of error** When using multiple group inputs in one GN node tree, and hiding unused node sockets to keep the tree visually clean, adding a new input socket into Group Input node will make this new socket appear in all existing Group Input nodes which are set to hide unused node sockets, so the user has to go through all of them and cycle the "hide unused node socket" toggle to properly hide the unused node sockets again. **Exact steps for others to reproduce the error** - Open .blend file - Hide unused sockets of any one Group Input node ({nav Nodes > Toggle Hidden node Sockets}) # Add a new input socket from sidebar. Result: The newly added input has appeared on all instances of Group Input node, despite not being used on them and the nodes being set to "hide unused node sockets". Expected: Newly added input to a Group Input node will not appear on nodes with "hide unused node sockets" enabled, because it is unused on them. Test File: [#94413.blend](https://archive.blender.org/developer/F12791159/T94413.blend) [2021-12-27 14-29-03.mp4](https://archive.blender.org/developer/F12777888/2021-12-27_14-29-03.mp4)
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Hans Goudey changed title from Adding GN Node Group inputs unhides newly added inputs on nodes with hidden node sockets to Adding Node Group inputs unhides newly added inputs on nodes with hidden node sockets 2021-12-27 15:38:05 +01:00

Added subscriber: @Symstract

Added subscriber: @Symstract
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Added subscribers: @lone_noel, @dfelinto

Added subscribers: @lone_noel, @dfelinto

I believe @lone_noel was working on something like this. Adding him here in case he is still interested on that.

I believe @lone_noel was working on something like this. Adding him here in case he is still interested on that.
Member

@dfelinto Yes, I was working on addressing this in D14531 and would enjoy to continue with that!

@dfelinto Yes, I was working on addressing this in [D14531](https://archive.blender.org/developer/D14531) and would enjoy to continue with that!
Author
Contributor

In #94413#1355098, @lone_noel wrote:
@dfelinto Yes, I was working on addressing this in D14531 and would enjoy to continue with that!

I am worried that your solution just adds one more UI toggle. My report is mainly about the existing "Hide unused node sockets" feature. "Hide new sockets" seems like a temporary bug workaround rather than a proper solution. I don't think it's a good idea to have another duplicate "sort of but not really like hide unused node sockets" feature, so that then the users need to wrangle interdependent behavior of two different toggles to get their desired outcome.

There is almost never a use case where users wants to hide the new sockets. They usually just want to hide unused one to keep the graph clean, and the feature for that is already there. It just doesn't work well for nodegroup inputs.

> In #94413#1355098, @lone_noel wrote: > @dfelinto Yes, I was working on addressing this in [D14531](https://archive.blender.org/developer/D14531) and would enjoy to continue with that! I am worried that your solution just adds one more UI toggle. My report is mainly about the existing "Hide unused node sockets" feature. "Hide new sockets" seems like a temporary bug workaround rather than a proper solution. I don't think it's a good idea to have another duplicate "sort of but not really like hide unused node sockets" feature, so that then the users need to wrangle interdependent behavior of two different toggles to get their desired outcome. There is almost never a use case where users wants to hide the new sockets. They usually just want to hide unused one to keep the graph clean, and the feature for that is already there. It just doesn't work well for nodegroup inputs.
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:44:20 +01:00
Author
Contributor

3 years later, this still continues to be broken despite patch to fix it already being finished.

3 years later, this still continues to be broken despite patch to fix it already being finished.

This is not a bug.

This is not a bug.
Author
Contributor

This is not a bug.

Then just have balls to close it, despite patch to fix it already being finished. I want to see you do mental gymnastics of explaining why spontaneously unhiding node sockets user has explicity hidden on existing group inputs when adding a new input is a feature.

> This is not a bug. Then just have balls to close it, despite patch to fix it already being finished. I want to see you do mental gymnastics of explaining why spontaneously unhiding node sockets user has explicity hidden on existing group inputs when adding a new input is a feature.
Dalai Felinto added
Type
Known Issue
and removed
Type
Bug
labels 2024-03-29 12:59:56 +01:00

It is more a missing QoL than a bug. So technically it is a known issue not a bug.

But at this point this is semantics. If someone were to make a patch for this we could consider it I think.

It is more a missing QoL than a bug. So technically it is a known issue not a bug. But at this point this is semantics. If someone were to make a patch for this we could consider it I think.

And to be clear, as far as I know there is no patch to fix it which is already finished.

And to be clear, as far as I know there is no patch to fix it which is already finished.
Author
Contributor

It is more a missing QoL than a bug. So technically it is a known issue not a bug.

But at this point this is semantics. If someone were to make a patch for this we could consider it I think.

You won't really motivate people to make one if you want them to invest time for you to just "consider it".

Anyway, I don't understand how this is not a bug given that the documentation:
https://docs.blender.org/manual/en/4.1/interface/controls/nodes/editing.html?utm_source=blender-4.1.0#bpy-ops-node-hide-socket-toggle
Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden. When a new group input is added, and it shows up on other group input nodes, which should be in hidden unconnected state, these nodes enter sort of "corrupted" state, because they are in this state but their displayed state does not reflect it.

> It is more a missing QoL than a bug. So technically it is a known issue not a bug. > > But at this point this is semantics. If someone were to make a patch for this we could consider it I think. You won't really motivate people to make one if you want them to invest time for you to just "consider it". Anyway, I don't understand how this is not a bug given that the documentation: https://docs.blender.org/manual/en/4.1/interface/controls/nodes/editing.html?utm_source=blender-4.1.0#bpy-ops-node-hide-socket-toggle Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden. When a new group input is added, and it shows up on other group input nodes, which should be in hidden unconnected state, these nodes enter sort of "corrupted" state, because they are in this state but their displayed state does not reflect it.
Member

Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden

As designed and implemented now, it's not a state though, it's an action. I agree with you that the behavior you suggest is better, but we might as well just say that instead of being so aggressive about calling this a bug.

>Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden As designed and implemented now, it's not a state though, it's an action. I agree with you that the behavior you suggest is better, but we might as well just say _that_ instead of being so aggressive about calling this a bug.
Author
Contributor

Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden

As designed and implemented now, it's not a state though, it's an action. I agree with you that the behavior you suggest is better, but we might as well just say that instead of being so aggressive about calling this a bug.

It's very difficult to not be in reaction to @mod_moder being so aggressive about implying its a feature request.

> >Simply says the feature hides unconnected node sockets. Always. Not under some circumstances. There are no exceptions. If the node is in this state, it should have any sockets that don't have any connection hidden > > As designed and implemented now, it's not a state though, it's an action. I agree with you that the behavior you suggest is better, but we might as well just say _that_ instead of being so aggressive about calling this a bug. It's very difficult to not be in reaction to @mod_moder being so aggressive about implying its a feature request.
Member

It's very difficult to not be in reaction to @mod_moder being so aggressive about implying its a feature request.

This is not a bug.

Yes, we should strive to give some reasoning at least when saying something like that. But I see the aggressive stuff is going in both directions. Anyway, let's try to get this PR merged!

>It's very difficult to not be in reaction to @mod_moder being so aggressive about implying its a feature request. >>This is not a bug. Yes, we should strive to give some reasoning at least when saying something like that. But I see the aggressive stuff is going in both directions. Anyway, let's try to get this PR merged!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-18 19:20:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94413
No description provided.