Fix #94413: Keep new group input sockets hidden

Update old patch: https://archive.blender.org/developer/D14531