source/blender/makesdna/DNA_node_types.h
@@ -480,7 +480,7 @@ enum {
   NODE_PREVIEW = 1 << 2,
   NODE_HIDDEN = 1 << 3,
   NODE_ACTIVE = 1 << 4,
-  // NODE_ACTIVE_ID = 1 << 5, /* Deprecated. */
+  NODE_HIDE_UNUSED_SOCKETS = 1 << 5,
   /** Used to indicate which group output node is used and which viewer node is active. */
   NODE_DO_OUTPUT = 1 << 6,
   // NODE_GROUP_EDIT = 1 << 7, /* Deprecated, dirty. */
